--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "md5": "^2.3.0",
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
+    "prop-types": "^15.8.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
